# CircuitPython_DIAL_GAUGE

./: .pylintrc  README.rst  dial_gauge.py  pyproject.toml
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: dial_gauge_simpletest.py
