# SPDX-FileCopyrightText: Copyright (c) 2023 Jose D. Montoya
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]

[project]
name = "circuitpython-dial_gauge"
description = "Dial gauge widget for displayio"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [{ name = "JDM", email = "xxx@mailmeto.mozmail.com" }]
urls = { Homepage = "https://github.com/jposada202020/CircuitPython_DIAL_GAUGE" }
keywords = [
    "sensor",
    "circuitpython",
    "dial_gauge",
    "fial",
    "gauge",
    "displayio",
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["dial_gauge"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { optional = { file = ["optional_requirements.txt"] } }
